# KISTI_DB_Manager

./: .gitignore  0.1.Sample_Code-ROR.ipynb  0.1.Sample_Code.ipynb  0.2.Sample_Code-Funding.ipynb  0.3.Sample_Code-WoS.ipynb  1.1.Schema_Vis.ipynb  README.md  ReadMe.md  Untitled.ipynb  gitignore  mkdocs.yml  pyproject.toml  setup.py
.ipynb_checkpoints/: 0.1.Sample_Code-checkpoint.ipynb
Data_Sample/: 01__WoS_Sample__MN.ftr  01__WoS_Sample__MN_Desc.csv  02__WoS_Sample__MN-SUB__dynamic_data__citation_related__SDG__sdg_category.ftr  02__WoS_Sample__MN-SUB__dynamic_data__citation_related__SDG__sdg_category_Desc.csv  02__WoS_Sample__MN-SUB__static_data__summary__titles__title_Desc.csv  03__WoS_Sample__MN-SUB__dynamic_data__citation_related__citation_topics__subj-group__subject.ftr  03__WoS_Sample__MN-SUB__dynamic_data__citation_related__citation_topics__subj-group__subject_Desc.csv  03__WoS_Sample__MN-SUB__static_data__fullrecord_metadata__category_info__subjects__subject.ftr  03__WoS_Sample__MN-SUB__static_data__fullrecord_metadata__category_info__subjects__subject_Desc.csv  04__WoS_Sample__EX.ftr  04__WoS_Sample__EX_Desc.csv  04__WoS_Sample__MN-SUB__dynamic_data__cluster_related__identifiers__identifier.ftr  04__WoS_Sample__MN-SUB__dynamic_data__cluster_related__identifiers__identifier_Desc.csv  05__WoS_Sample__EX-SUB__ic_related__oases__oas.ftr  05__WoS_Sample__EX-SUB__ic_related__oases__oas_Desc.csv  05__WoS_Sample__MN-SUB__dynamic_data__ic_related__oases__oas.ftr  05__WoS_Sample__MN-SUB__dynamic_data__ic_related__oases__oas_Desc.csv  06__WoS_Sample__EX-SUB__cluster_related__identifiers__identifier.ftr  (+32 more)
(+105 files in other folders)
