[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kisti-db-manager"
version = "0.7.0"
description = "MariaDB/MySQL handling + robust JSON/XML flattening utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
tabular = [
  "numpy>=1.23",
  "pandas>=1.5",
]
json = [
  "numpy>=1.23",
  "pandas>=1.5",
  "pyarrow>=12.0",
  "tqdm>=4.0",
  "orjson>=3.0",
  "xmltodict>=0.13",
]
db = [
  "pymysql>=1.0",
  "SQLAlchemy>=2.0",
]
viz = [
  "matplotlib>=3.7",
  "networkx>=3.2",
]
review = [
  "cairosvg>=2.7",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[project.scripts]
kisti-db-manager = "KISTI_DB_Manager.cli:main"

[tool.setuptools.packages.find]
include = ["KISTI_DB_Manager*"]
